# coursework

./: README.md  logger.py  main.py  pyproject.toml
src/: courses.py  functions.py  home_page.py  responses.py  services.py
tests/: test_courses.py  test_functions.py  test_home_page.py  test_responses.py  test_services.py
