[tool.poetry]
name = "coursework"
version = "0.1.0"
description = "coursework of artem sergeev"
authors = ["Your Name <you@example.com>"]
license = "no licence i am punk"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pytest = "^8.3.2"


[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.1.0"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
